255 openapiasyncapi homogenize mappercontentutils for both specifications (#349)
* Refactor